# project-nutra

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Contributing.md  README.md  ideas.md
.github/workflows/: build.yaml  test.yaml
cmake/: AddDependency.cmake  AddNutra.cmake  Options.cmake
docs/: ideas.md  input.md  planning.md  story.md
engine/: CMakeLists.txt  Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp  SDL_Instance.cpp  SDL_Instance.hpp  Window.cpp  Window.hpp  input_manager.cpp  input_manager.hpp  input_state.cpp  input_state.hpp  keyboard_input_state.cpp  keyboard_input_state.hpp  keycode.cpp  keycodes.hpp
game/: CMakeLists.txt  main.cpp
images/: Rocket.aseprite
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/src/: Action.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  SDL_Instance.cpp  SDL_Instance.hpp  Window.cpp  Window.hpp  game_object.hpp  input_action.hpp  input_manager.cpp  input_manager.hpp  input_state.cpp  input_state.hpp  input_state_type.hpp  iterable_type.hpp  keyboard_input_state.cpp  keyboard_input_state.hpp  keycode.cpp  keycode.hpp  keycode_mapping.cpp  keycode_mapping.hpp  keycodes.hpp  mouse_input_state.cpp  mouse_input_state.hpp  renderer.hpp  scene.cpp  scene.hpp  sdl_instance.cpp  window.cpp
libs/core/test/: CMakeLists.txt  input_manager_test.hpp  main.cpp
src/: Application.cpp  Application.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp  application.cpp  application.hpp  main.cpp  main_menu.cpp  main_menu.hpp  nutra-config.hpp.in  nutra_config.hpp.in
