file(GLOB_RECURSE NUTRA_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE NUTRA_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

add_nutra_executable(${PROJECT_NAME}-Game ${NUTRA_SOURCE_FILES} ${NUTRA_HEADER_FILES} )

target_link_libraries(${PROJECT_NAME}-Game SDL2main ${PROJECT_NAME}-Engine)
target_include_directories(${PROJECT_NAME}-Game PUBLIC ${SDL_INCLUDE_DIRS})