file(GLOB_RECURSE LIBRARY_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE LIBRARY_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

add_nutra_library(${LIBRARY_NAME} ${LIBRARY_SOURCE_FILES} ${LIBRARY_HEADER_FILES})

target_link_libraries(${LIBRARY_NAME} SDL2-static)
target_include_directories(${LIBRARY_NAME} PUBLIC ${SDL_INCLUDE_DIRS})